# haxpile

./: README.md  haxpile.cabal  stack.yaml
_misc/: OldCabalSetup.hs.txt  cabalsetupbuildflagsnoreadworkaround.hs.txt  cabalsetupbuildhookargs.txt  cabalsetupbuildinfo.dump  cabalsetupbuildinfo.dump.pretty  crikeygoingmad  setuphs-env-args.txt
src/: @InvokeFrontend.hs  @Main.hs
src/Hxp/: ADT.hs  Base.hs  ES.hs
src/Hxp/GHC/: FeES.hs
src/Hxp/Setup/: Cabal.hs
src/Hxp/Via/: CabalSetup.hs  FeES.hs  Frontend.hs
tests/: Setup.hs  haxpiletests.cabal  stack.yaml
tests/src/HxpT/: T01_PrimAdd.hs
