name:                haxpile
version:             0.1.0.0
homepage:            https://github.com/metaleap/haxpile
license:             GPL
license-file:        LICENSE
author:              metaleap
maintainer:          metaleap@mailbox.org
copyright:           Phil Schumann
category:            Misc
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  default-language:    Haskell2010
  ghc-options:         -j4 -Wall -O2
  hs-source-dirs:      src
  build-depends:
    haxbase,
    base, Cabal, ghc
  exposed-modules:
    Hxp.Setup.Cabal,
    Hxp.ADT
