name:                haxpiletests
version:             0.1.0.0
homepage:            https://github.com/metaleap/haxpile
license:             GPL
license-file:        LICENSE
author:              metaleap
maintainer:          metaleap@mailbox.org
copyright:           Phil Schumann
category:            Misc
build-type:          Custom
cabal-version:       >=1.10

library
    default-language:    Haskell2010
    ghc-options:         -ddump-stg -j4 -Wall -O2
    hs-source-dirs:      src
    build-depends:
        haxbase, haxpile,
        base
    exposed-modules:
        HxpT.T01_PrimAdd
